--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             background-color: #fff;
             z-index: 98;
         }
-        /*상단 메뉴 네비*/
+        /*상단 메뉴 네비비*/
         nav{
             width: 1280px;
             margin: 0 auto;
