--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             z-index: 98;
         }
         /*상단 메뉴 네비이이*/
+        /*상단 메뉴 네비이이*/
         nav{
             width: 1280px;
             margin: 0 auto;
