--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- jquery 최신버전 사용-->
+    <!-- jquery 3.5.1버전-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/slide.js"></script>
     <script src="js/boxContent.js"></script>
