--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             background-color: #fff;
             z-index: 98;
         }
-        /*상단 메뉴 네비이이*/
-        /*상단 메뉴 네비이이*/
+        /*상단 메뉴 네비게이션*/
         nav{
             width: 1280px;
             margin: 0 auto;
@@ -599,6 +598,17 @@
             font-weight: bold;
             color: #414040;
         }
+
+        /* section 3 시작*/
+        #section3{
+            min-width: 1280px;
+            height: 700px;
+            padding: 100px 0;
+            margin: 0 auto;
+            text-align: center;
+            /*opacity: 0;*/ 
+        }
+        /* section 3 끝*/
     </style>
 </head>
 <body>
@@ -1174,6 +1184,12 @@
          <!-- section2 박스 슬라이더 구간 끝-->
     </section>
     <!--section 2 끝-->
+
+    <!-- section 3 시작-->
+    <section id="section3">
+
+    </section>
+    <!-- section 3 끝-->
     <script>
         $(document).ready(function(){
             var Trigger1 = false;
