--- a/index.html
+++ b/index.html
@@ -601,12 +601,18 @@
 
         /* section 3 시작*/
         #section3{
+            background-color: #f9f9f9;
             min-width: 1280px;
             height: 700px;
             padding: 100px 0;
             margin: 0 auto;
             text-align: center;
-            /*opacity: 0;*/ 
+            /*opacity: 0;*/
+        }
+        .se3_main_span{
+            font-weight: bold;
+            padding-bottom: 20px;
+            border-bottom: 3px solid #e2e2e2;
         }
         /* section 3 끝*/
     </style>
@@ -1187,7 +1193,27 @@
 
     <!-- section 3 시작-->
     <section id="section3">
+        <div class="se3_main">
+            <!--section3 title-->
+            <h1 style="font-weight:100;">THIS WEEK THE <span class="se3_main_span">BEST SELECTION</span> OF ITEMS & EVENT</h1>
 
+            <!-- section3 contents 시작-->
+            <div class="se3_content">
+                <div class="se3_c1">
+
+                </div>
+                <div class="se3_c2">
+
+                </div>
+                <div class="se3_c3">
+
+                </div>
+                <div class="se3_c4">
+
+                </div>
+            </div>
+            <!-- section3 contents 끝-->
+        </div>
     </section>
     <!-- section 3 끝-->
     <script>
