--- a/index.html
+++ b/index.html
@@ -643,16 +643,32 @@
 
         /* section 4 시작*/
         #section4{
-            background-color: #f9f9f9;
+            background-color: #fff;
             min-width: 1280px;
             height: 700px;
             padding: 100px 0;
             margin: 0 auto;
             text-align: center;
-            background-image: url("img/section4.jpg");
-            background-size: 100% 100%;
-            background-repeat: no-repeat;
             /*opacity: 0;*/
+        }
+        .se4_title{
+            font-size: 26px;
+            color: #414040;
+        }
+        .se4_content{
+            margin: 50px;
+            padding: 50px;
+            border: 1px solid black;
+        }
+        .se4_content ul{
+            list-style: none;
+        }
+        .se4_content li{
+            display: inline-block;
+            border: 1px solid black;
+            margin: 30px;
+            width: 300px;
+            height: 500px;
         }
     </style>
 </head>
@@ -1272,7 +1288,53 @@
 
     <!-- section 4 시작-->
     <section id="section4">
-
+        <div class="se4_main">
+            <p class="se4_title">NEW ARRIVALS</p>
+            <div class="se4_content">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <img src="" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
     <!-- section 4 끝-->
     <script>
