--- a/index.html
+++ b/index.html
@@ -658,17 +658,43 @@
         .se4_content{
             margin: 50px;
             padding: 50px;
-            border: 1px solid black;
         }
         .se4_content ul{
             list-style: none;
         }
         .se4_content li{
             display: inline-block;
-            border: 1px solid black;
             margin: 30px;
             width: 300px;
             height: 500px;
+            overflow: hidden;
+            position: relative;
+            z-index: 5;
+            border-radius: 5px;
+        }
+        .se4_content li:hover .se4_caption{
+            transform: translateY(-100px);
+        }
+        .se4_content li:hover img{
+            transform: scale(1.2);
+        }
+        .se4_content li img{
+            transition: ease-in-out all 0.5s;
+        }
+        .se4_caption{
+            transition: ease-in-out all 0.5s;
+            color: #fff;
+            width: 300px;
+            height: 470px;
+            background-color: rgba(0, 0, 0, 0.3);
+            position: absolute;
+            z-index: 10;
+        }
+        .se4_caption h3{
+            padding-top: 20px;
+        }
+        .se4_caption p{
+            padding-top: 10px;
         }
     </style>
 </head>
@@ -1294,42 +1320,74 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <img src="" alt="">
+                            <img src="img/se4_1.jpg" alt="section4 photo1" width="100%" height="100%">
+                            <div class="se4_caption">
+                                <h3>상품 1</h3>
+                                <p>12,345\</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="" alt="">
+                            <img src="img/se4_2.jpg" alt="section4 photo2" width="100%" height="100%">
+                            <div class="se4_caption">
+                                <h3>상품 2</h3>
+                                <p>12,345\</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="" alt="">
+                            <img src="img/se4_3.jpg" alt="section4 photo3" width="100%" height="100%">
+                            <div class="se4_caption">
+                                <h3>상품 3</h3>
+                                <p>12,345\</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="" alt="">
+                            <img src="img/se4_4.jpg" alt="section4 photo4" width="100%" height="100%">
+                            <div class="se4_caption">
+                                <h3>상품 4</h3>
+                                <p>12,345\</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="" alt="">
+                            <img src="img/se4_5.jpg" alt="section4 photo5" width="100%" height="100%">
+                            <div class="se4_caption">
+                                <h3>상품 5</h3>
+                                <p>12,345\</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="" alt="">
+                            <img src="img/se4_6.jpg" alt="section4 photo6" width="100%" height="100%">
+                            <div class="se4_caption">
+                                <h3>상품 6</h3>
+                                <p>12,345\</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="" alt="">
+                            <img src="img/se4_7.jpg" alt="section4 photo7" width="100%" height="100%">
+                            <div class="se4_caption">
+                                <h3>상품 7</h3>
+                                <p>12,345\</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="" alt="">
+                            <img src="img/se4_8.jpg" alt="section4 photo8" width="100%" height="100%">
+                            <div class="se4_caption">
+                                <h3>상품 8</h3>
+                                <p>12,345\</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
